<resources>
    <string name="app_name">LoginPage</string>
    <string name="signup">Signup</string>
    <string name="title">Login</string>
    <string name="username">Username</string>
    <string name="birthdate">Birthdate</string>
    <string name="password">Password</string>
    <string name="conPass">Confirm Password</string>
    <string name="btnSign">Signup</string>
    <string name="btnLogin">Login</string>
    <string name="login">Login Here</string>
    <string name="hint">Already have an Account ? Login</string>
</resources>