<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Activity"
    android:gravity="center"
    android:background="@drawable/ic_image">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:cardCornerRadius="50dp"
        app:cardBackgroundColor="@color/cardview_shadow_start_color">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="30sp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:hint="@string/username"
            android:inputType="text"
            android:outlineProvider="none"
            android:padding="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="190dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="20dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
           android:text="@string/btnLogin"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="300dp"
            android:layout_marginStart="50dp"
            android:onClick="Login"
            android:enabled="false"
            android:textColor="@color/white"
            android:backgroundTint="#FF5722"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>